# zurie_vulkan_engine

./: Cargo.toml  LICENSE  README.md  justfile  manifest.yaml  test.rs  zurie-mod.md
.github/workflows/: rust.yml
cmod/: .gitignore  game.c  justfile
crates/core/: Cargo.toml
crates/core/src/: app.rs  compute_sand.rs  gui.rs  main.rs  render_pass.rs  scripting.rs  state.rs
crates/core/src/scripting/: engine_mod.rs  mod.rs  mod_manager.rs
crates/core/src/scripting/functions/: gui.rs  input.rs  utils.rs
crates/core/src/state/: camera.rs  input.rs
crates/example_mod/: Cargo.toml
crates/example_mod/src/: lib.rs
crates/gruvbox_egui/: Cargo.toml
crates/mod_api/: Cargo.toml
crates/mod_api/src/: gui.rs  input.rs  lib.rs
crates/shared_types/: Cargo.toml
crates/shared_types/src/: lib.rs
crates/vampire_like_demo/: Cargo.toml
crates/vampire_like_demo/src/: lib.rs
crates/zurie_android/: Cargo.toml
crates/zurie_android/src/: lib.rs
crates/zurie_audio/: Cargo.toml
crates/zurie_audio/src/: lib.rs  main.rs
crates/zurie_bin/: Cargo.toml
crates/zurie_bin/src/: main.rs
crates/zurie_core/: Cargo.toml
crates/zurie_core/shaders/pixels_draw/: vs.glsl
crates/zurie_core/src/: app.rs  egui_theme.rs  lib.rs  main.rs  state.rs
crates/zurie_core/src/state/: camera.rs  gui.rs  input.rs
crates/zurie_ecs/: Cargo.toml
crates/zurie_ecs/src/: lib.rs
crates/zurie_event/: Cargo.toml
crates/zurie_event/src/: lib.rs
crates/zurie_input/: Cargo.toml
crates/zurie_input/src/: lib.rs
crates/zurie_mod_api/: Cargo.toml
crates/zurie_mod_api/src/: audio.rs  camera.rs  ecs.rs  events.rs  file.rs  game_logic.rs  gui.rs  input.rs  lib.rs  sprite.rs  utils.rs
crates/zurie_mod_interface/: Cargo.toml
crates/zurie_mod_interface/src/: ecs.rs  input.rs  lib.rs
crates/zurie_render/: Cargo.toml
crates/zurie_render/shaders/object_draw/: fs.glsl  vs.glsl
crates/zurie_render/src/: compute_sand.rs  gui.rs  lib.rs  object_draw.rs  render.rs  render_pass.rs  render_state.rs  sprite.rs
crates/zurie_render/src/object_draw/: mod.rs  pipeline.rs  render_pass.rs
crates/zurie_render/src/pixels_draw/: pipeline.rs  render_pass.rs
crates/zurie_render2/: Cargo.toml
crates/zurie_render2/src/: constants.rs  debug.rs  lib.rs  main.rs  platforms.rs  render_state.rs  structures.rs  utils.rs
crates/zurie_render2/src/shaders/: frag.wgsl  vert.wgsl
crates/zurie_render_glue/: Cargo.toml
crates/zurie_render_glue/src/: lib.rs
crates/zurie_scripting/: Cargo.toml  zurie_engine.wit
crates/zurie_scripting/src/: engine_mod.rs  lib.rs  mod_manager.rs  utils.rs
crates/zurie_scripting/src/functions/: audio.rs  camera.rs  ecs.rs  events.rs  file.rs  game_logic.rs  gui.rs  input.rs  mod.rs  rand.rs  sprite.rs  utils.rs
crates/zurie_shared/: Cargo.toml
crates/zurie_shared/src/: camera.rs  lib.rs  sim_clock.rs
crates/zurie_types/: Cargo.toml
crates/zurie_types/src/: camera.rs  lib.rs
shaders/compute/: render.glsl  sand.glsl
shaders/pixels_draw/: fr.glsl  fs.glsl  vs.glsl
src/: app.rs  compute_render.rs  compute_sand.rs  gui.rs  main.rs  pixels_draw.rs  render.rs  render_pass.rs  shaders.rs  state.rs
src/state/: camera.rs  input.rs
static/: ase.aseprite  ase2.aseprite  enemy.aseprite  error.aseprite  player.aseprite  projectile.aseprite
zigmod/: .gitignore  build.zig  build.zig.zon
zigmod/src/: main.zig
