[package]
name = "vulkan_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = {version = "1.16.3", features = ["derive"]}
color-hex = "0.2.0"
ecolor = {version = "0.28.1", features = ["color-hex"]}
env_logger = "0.11.5"
fastrand = "2.1.0"
glam = "0.28.0"
log = "0.4.22"
naga = {version = "22.1.0", features = ["spv-out", "wgsl-in"]}
pollster = "0.3.0"
rdrand = "0.8.3"
vulkano = {version = "0.34.1", features=["macros"]}
vulkano-shaders = "0.34.0"
winit = {version = "0.30.4", features = ["rwh_05"]}
