[package]
name = "zurie_android"
version = "0.0.0"
edition = "2021"

[lib]
name = "zurie_android"
crate-type = ["staticlib", "cdylib"]

[dependencies]
android-activity = { version = "0.6.0", features = [
    "native-activity",
] } #zurie_core = { path = "../zurie_core" }
winit = { version = "0.30.5", features = [
    "rwh_05",
    "rwh_06",
    "android-native-activity",
] }
android_logger = "0.14.1"
log = "0.4.22"


[package.metadata.android]
package = "me.zurie.zurie_engine"
apk_name = "zurie_engine"
assets = "../assets"
strip = "strip"
resources = "../build/android/res"
build_targets = ["aarch64-linux-android"]

[package.metadata.android.sdk]
target_sdk_version = 30

[package.metadata.android.application]
icon = "@mipmap/icon"
label = "Zurie Engine" # ToDo
