[package]
name = "zurie_audio"
version = "0.0.0"
edition = "2024"

[dependencies]
kira = "0.10.2"
slotmap = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
zurie_types = { path = "../zurie_types" }
cpal = { version = "0.15.1", features = ["oboe-shared-stdcxx"] }
tracy-client = {workspace = true}

[[bin]]
name = "zurie_audio_test"
path = "src/main.rs"
