[package]
name = "zurie_render"
version = "0.0.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.16.3", features = ["derive"] }
color-hex = "0.2.0"
ecolor = { version = "0.28.1", features = ["color-hex"] }
egui_winit_vulkano = { git = "https://github.com/Zuriefais/egui_winit_vulkano", version = "0.27.0" }
fastrand = "2.1.0"
log = { workspace = true }
naga = { version = "22.1.0", features = ["spv-out", "wgsl-in"] }
pollster = "0.3.0"
vulkano = { version = "0.34.1", features = ["macros"] }
vulkano-shaders = { version = "0.34.0", features = [
    "shaderc-build-from-source",
] }
winit = { version = "0.30.5", features = ["rwh_05", "rwh_06"] }
zurie_shared = { path = "../zurie_shared" }
strum = "*"
strum_macros = "*"
zurie_types = { path = "../zurie_types" }
anyhow = { workspace = true }
asefile = { version = "*" }
slotmap = { workspace = true }

image = { version = "*" }
