[package]
name = "zurie_scripting"
version = "0.0.0"
edition = "2021"

[dependencies]
wasmtime = "26.0.0"
thiserror = "1.0.63"
anyhow = "1.0.89"
crossbeam = "0.8.4"
zurie_types = { path = "../zurie_types" }
zurie_shared = { path = "../zurie_shared" }
hashbrown = "0.15.0"
egui = { version = "0.29.1" }
log = "0.4.22"
winit = { version = "0.30.5", features = ["rwh_05", "rwh_06"] }
rand = "0.8.5"
